--- a/css/bio.css
+++ b/css/bio.css
@@ -1,3 +1,9 @@
+.bio-container {
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .bio {
   font-family: "Open Sans Condensed";
   background-attachment: fixed;
